# selecao-dev-fullstack-unicap

./: README.md  render.yaml
backend/: pyproject.toml  render.yaml  start.sh
backend/api/: main.py
backend/api/routes/: analyze.py  healthz.py
backend/schemas/: analysis.py
backend/services/: ner_service.py  nlp_service.py  registry.py
frontend/: angular.json  package-lock.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.ts
frontend/src/app/models/: analysis.model.ts
frontend/src/app/services/: analysis.service.ts
frontend/src/environments/: environment.development.ts  environment.production.ts  environment.ts
