[project]
name = "backend"
version = "0.1.0"
description = "Backend API for the Intership Application Challenge from FASA/UNICAP for the role of Intern in Full-Stack Development with applied AI"
author = "Marcos Filipe Gonçalves Capella"
readme = "../README.md"
requires-python = ">=3.10.11"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic>=2.11.9",
    "uvicorn>=0.35.0",
]
