[project]
name = "backend"
version = "0.1.0"
description = "Backend API for the Intership Application Challenge from FASA/UNICAP for the role of Intern in Full-Stack Development with applied AI"
readme = "../README.md"
requires-python = ">=3.10.11"
dependencies = [
    "fastapi>=0.116.2",
    "gunicorn>=23.0.0",
    "pt-core-news-sm",
    "pydantic>=2.11.9",
    "spacy>=3.8.7",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
pt-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl" }
